--- a/Main/style.css
+++ b/Main/style.css
@@ -53,3 +53,9 @@ body {
     box-shadow: none;
 
 }
+.menuBtn.open .burgerMenuBtn::before{
+    transform: rotate(45deg) translate(35px, -35px);
+}
+.menuBtn.open .burgerMenuBtn::after{
+    transform: rotate(-45deg) translate(35px, 35px);
+}
