--- a/style.css
+++ b/style.css
@@ -61,12 +61,13 @@ body {
 }
 .sidebar ul li{
     padding: 22px 16px;
+    list-style-type: none;
 }
 .sidebar ul li a{
     text-decoration: none;
     color: var(--primary);
-    font-size: 20px;
-    padding: 22px 42px;
+    font-size: 18px;
+    padding: 20px 42px;
 }
 .sidebar ul li :hover{
     color: var(--secondary);
@@ -74,7 +75,7 @@ body {
 a.login{
     text-decoration: none;
     position: relative;
-    top: 450px;
+    top: 45vw;
     background-color: var(--primary);
     color: var(--light);
     padding: 20px 30px;
@@ -88,6 +89,29 @@ a.login{
     top: 100px;
     color: var(--light);
 
+}
+.signin{
+    display: flex;
+    position: absolute;
+    left: 35vw;
+    margin-left: auto;
+    margin-right: auto;
+    top: 300px;
+    background-color: var(--primary);
+    padding: 30px;
+    border-radius: 20px;
+}
+.signin form{
+    color: var(--secondary);
+    position: relative;
+    text-align: center;
+    font-size: 18px;
+}
+.signin form label{
+    color: var(--light);
+}
+.signin form label .submit{
+    background-color: var(--secondary);
 }
 /* Menu */
 .menuBtn {
@@ -116,7 +140,6 @@ a.login{
     height: 0.2rem;
     background: var(--light);
     border-radius: 5px;
-   
     transition: all 1s ease-in-out;
 }
 .burgerMenuBtn::before{
