--- a/style.css
+++ b/style.css
@@ -90,6 +90,20 @@ a.login{
     color: var(--light);
 
 }
+footer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: black;
+    width: 100vw;
+    height:auto;
+    padding-top: 40px;
+    color: var(--light);
+}
+footer.content{
+    
+}
 .signin{
     display: flex;
     position: absolute;
