--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ a.login{
 }
 .signin{
     position: relative;
-    width: 600px;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
     top: 200px;
@@ -229,7 +229,39 @@ table{
     border-radius: 15px;
     width: 400px;
 }
+.productCard{
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    top: 15%;
+    width: 90%;
+    height: 75%;
+    padding: 10px;
+    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("icons/deviceProduct.jpg");
+    background-position: top;
+    border-radius: 20px;
+}
 
+.productCard h1{
+    color: var(--light);
+    position: relative;
+    top: 30%;
+}
+.productCard h2{
+    position: relative;
+    top: 35%;
+    color: var(--light);
+}
+.productCard p{
+    position: relative;
+    top: 40%;
+    color: var(--light);
+}
+.productCard .login{
+    position:relative;
+    top: 280px;
+    box-shadow: 0 2px 5px black;
+}
 /* Menu */
 .menuBtn {
     position: relative;
@@ -246,7 +278,6 @@ table{
     height: 0.2rem;
     background: var(--light);
     border-radius: 5px;
-
     transition: all 1s ease-in-out;
 }
 .burgerMenuBtn::before,
